Started CSS  Oct 2nd
Began CSS got to p tag

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <head>
     <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
     <meta http-equiv="Content-Style-Type" content="text/css" />
+    <link rel="stylesheet" href="https://use.typekit.net/ydv2bhy.css">
     <title>
       The Project Gutenberg eBook of Adventures of Sherlock Holmes, by A. Conan Doyle
     </title>
@@ -68,8 +69,8 @@ Libraries.)
 <hr class="chap" />
 <div class="figcenter fig400"><a name="frontis" id="frontis"></a>
 <img src="images/frontispiece.jpg" width="392" height="576" alt="Frontispiece" />
-<div class="caption nomb">“THE GENTLEMAN IN THE PEW HANDED IT UP TO HER”</div>
-<div class="caption2 nomt right">[Page 238</div>
+<div class="captionnomb">“THE GENTLEMAN IN THE PEW HANDED IT UP TO HER”</div>
+<div class="caption2nomtright">[Page 238]</div>
 </div>
 
 <hr class="chap" />
@@ -85,15 +86,15 @@ OF<br />
 
 <p class="title mt4"><small>ILLUSTRATED</small></p>
 
-<div class="figcenter fig120">
+<div class="figcenterfig120">
 <img src="images/logo.jpg" width="120" height="139" alt="Logo" />
 </div>
 
-<p class="title mt4">NEW YORK<br />
+<p class="titlemt4">NEW YORK<br />
  HARPER &amp; BROTHERS, FRANKLIN SQUARE
 </p>
 
-<p class="title mt4">Copyright, 1892, by <span class="smcap">Harper &amp; Brothers</span>.</p>
+<p class="titlemt4">Copyright, 1892, by <span class="smcap">Harper &amp; Brothers</span>.</p>
 <hr class="line" />
 <p class="title"><i>All rights reserved.</i></p>
 
@@ -108,27 +109,27 @@ OF<br />
 </tr>
 <tr>
 <td class="tdr">I.</td>
-<td class="tdl hang">&mdash;A SCANDAL IN BOHEMIA</td>
+<td class="tdlhang">&mdash;A SCANDAL IN BOHEMIA</td>
 <td class="tdr2"><a href="#i">3</a></td>
 </tr>
 <tr>
 <td class="tdr">II.</td>
-<td class="tdl hang">&mdash;THE RED-HEADED LEAGUE</td>
+<td class="tdlhang">&mdash;THE RED-HEADED LEAGUE</td>
 <td class="tdr2"><a href="#ii">29</a></td>
 </tr>
 <tr>
 <td class="tdr">   III.</td>
-<td class="tdl hang">&mdash;A CASE OF IDENTITY</td>
+<td class="tdlhang">&mdash;A CASE OF IDENTITY</td>
 <td class="tdr2"><a href="#iii">56</a></td>
 </tr>
 <tr>
 <td class="tdr">    IV.</td>
-<td class="tdl hang">&mdash;THE BOSCOMBE VALLEY MYSTERY</td>
+<td class="tdlhang">&mdash;THE BOSCOMBE VALLEY MYSTERY</td>
 <td class="tdr2"><a href="#iv">76</a></td>
 </tr>
 <tr>
 <td class="tdr">     V.</td>
-<td class="tdl hang">&mdash;THE FIVE ORANGE PIPS</td>
+<td class="tdlhang">&mdash;THE FIVE ORANGE PIPS</td>
 <td class="tdr2"><a href="#v">104</a></td>
 </tr>
 <tr>
@@ -138,32 +139,32 @@ OF<br />
 </tr>
 <tr>
 <td class="tdr">   VII.</td>
-<td class="tdl hang">&mdash;THE ADVENTURE OF THE BLUE CARBUNCLE</td>
+<td class="tdlhang">&mdash;THE ADVENTURE OF THE BLUE CARBUNCLE</td>
 <td class="tdr2"><a href="#vii">153</a></td>
 </tr>
 <tr>
 <td class="tdr">  VIII.</td>
-<td class="tdl hang">&mdash;THE ADVENTURE OF THE SPECKLED BAND</td>
+<td class="tdlhang">&mdash;THE ADVENTURE OF THE SPECKLED BAND</td>
 <td class="tdr2"><a href="#viii">176</a></td>
 </tr>
 <tr>
 <td class="tdr">    IX.</td>
-<td class="tdl hang">&mdash;THE ADVENTURE OF THE ENGINEER’S THUMB</td>
+<td class="tdlhang">&mdash;THE ADVENTURE OF THE ENGINEER’S THUMB</td>
 <td class="tdr2"><a href="#ix">205</a></td>
 </tr>
 <tr>
 <td class="tdr">     X.</td>
-<td class="tdl hang">&mdash;THE ADVENTURE OF THE NOBLE BACHELOR</td>
+<td class="tdlhang">&mdash;THE ADVENTURE OF THE NOBLE BACHELOR</td>
 <td class="tdr2"><a href="#x">229</a></td>
 </tr>
 <tr>
 <td class="tdr">    XI.</td>
-<td class="tdl hang">&mdash;THE ADVENTURE OF THE BERYL CORONET</td>
+<td class="tdlhang">&mdash;THE ADVENTURE OF THE BERYL CORONET</td>
 <td class="tdr2"><a href="#xi">253</a></td>
 </tr>
 <tr>
 <td class="tdr">   XII.</td>
-<td class="tdl hang">&mdash;THE ADVENTURE OF THE COPPER BEECHES</td>
+<td class="tdlhang">&mdash;THE ADVENTURE OF THE COPPER BEECHES</td>
 <td class="tdr2"><a href="#xii">280</a></td>
 </tr>
 </table>
@@ -174,94 +175,94 @@ OF<br />
 
 <table summary="Illustrations">
 <tr>
-<td class="tdl hang">“THE GENTLEMAN IN THE PEW HANDED IT UP TO HER”</td>
+<td class="tdlhang">“THE GENTLEMAN IN THE PEW HANDED IT UP TO HER”</td>
 <td class="tdr3" colspan="2"><a href="#frontis"><i>Frontispiece</i></a></td>
 </tr>
 <tr>
-<td class="tdl hang">“A MAN ENTERED”</td>
+<td class="tdlhang">“A MAN ENTERED”</td>
 <td class="tdc"><i>Facing&nbsp;p.</i></td>
 <td class="tdr3"><a href="#man">8</a></td>
 </tr>
 <tr>
-<td class="tdl hang">“THE DOOR WAS SHUT AND LOCKED”</td>
+<td class="tdlhang">“THE DOOR WAS SHUT AND LOCKED”</td>
 <td class="tdc">″</td>
 <td class="tdr3"><a href="#door">40</a></td>
 </tr>
 
 <tr>
-<td class="tdl hang">“ALL AFTERNOON HE SAT IN THE STALLS”</td>
+<td class="tdlhang">“ALL AFTERNOON HE SAT IN THE STALLS”</td>
 <td class="tdc">″</td>
 <td class="tdr3"><a href="#all">46</a></td>
 </tr>
 
 <tr>
-<td class="tdl hang">“SHERLOCK HOLMES WELCOMED HER”</td>
+<td class="tdlhang">“SHERLOCK HOLMES WELCOMED HER”</td>
 <td class="tdc">″</td>
 <td class="tdr3"><a href="#sherlock">60</a></td>
 </tr>
 
 <tr>
-<td class="tdl hang">“GLANCING ABOUT HIM LIKE A RAT IN A TRAP”</td>
+<td class="tdlhang">“GLANCING ABOUT HIM LIKE A RAT IN A TRAP”</td>
 <td class="tdc">″</td>
 <td class="tdr3"><a href="#glancing">72</a></td>
 </tr>
 
 <tr>
-<td class="tdl hang">“THEY FOUND THE BODY”</td>
+<td class="tdlhang">“THEY FOUND THE BODY”</td>
 <td class="tdc">″</td>
 <td class="tdr3"><a href="#they">80</a></td>
 </tr>
 
 <tr>
-<td class="tdl hang">“THE MAID SHOWED US THE BOOTS”</td>
+<td class="tdlhang">“THE MAID SHOWED US THE BOOTS”</td>
 <td class="tdc">″</td>
 <td class="tdr3"><a href="#maid">92</a></td>
 </tr>
 
 <tr>
-<td class="tdl hang">“‘HOLMES,’ I CRIED, ‘YOU ARE TOO LATE’”</td>
+<td class="tdlhang">“‘HOLMES,’ I CRIED, ‘YOU ARE TOO LATE’”</td>
 <td class="tdc">″</td>
 <td class="tdr3"><a href="#holmes2">122</a></td>
 </tr>
 
 <tr>
-<td class="tdl hang">“AT THE FOOT OF THE STAIRS SHE MET THIS LASCAR SCOUNDREL”</td>
+<td class="tdlhang">“AT THE FOOT OF THE STAIRS SHE MET THIS LASCAR SCOUNDREL”</td>
 <td class="tdc">″</td>
 <td class="tdr3"><a href="#at">134</a></td>
 </tr>
 
 <tr>
-<td class="tdl hang">“‘HAVE MERCY!’ HE SHRIEKED”</td>
+<td class="tdlhang">“‘HAVE MERCY!’ HE SHRIEKED”</td>
 <td class="tdc">″</td>
 <td class="tdr3"><a href="#have">172</a></td>
 </tr>
 
 <tr>
-<td class="tdl hang">“‘GOOD-BYE, AND BE BRAVE’”</td>
+<td class="tdlhang">“‘GOOD-BYE, AND BE BRAVE’”</td>
 <td class="tdc">″</td>
 <td class="tdr3"><a href="#good">196</a></td>
 </tr>
 
 <tr>
-<td class="tdl hang">“‘NOT A WORD TO A SOUL’”</td>
+<td class="tdlhang">“‘NOT A WORD TO A SOUL’”</td>
 <td class="tdc">″</td>
 <td class="tdr3"><a href="#not">214</a></td>
 </tr>
 
 <tr>
-<td class="tdl hang">“‘I WILL WISH YOU ALL A VERY GOOD NIGHT’”</td>
+<td class="tdlhang">“‘I WILL WISH YOU ALL A VERY GOOD NIGHT’”</td>
 <td class="tdc">″</td>
 <td class="tdr3"><a href="#will">250</a></td>
 </tr>
 
 <tr>
-<td class="tdl hang">“I CLAPPED A PISTOL TO HIS HEAD”</td>
+<td class="tdlhang">“I CLAPPED A PISTOL TO HIS HEAD”</td>
 <td class="tdc">″</td>
 <td class="tdr3"><a href="#clapped">278</a></td>
 </tr>
 
 <tr>
-<td class="tdl hang">“‘I AM SO DELIGHTED THAT YOU HAVE COME’”</td>
+<td class="tdlhang">“‘I AM SO DELIGHTED THAT YOU HAVE COME’”</td>
 <td class="tdc">″</td>
 <td class="tdr3"><a href="#delighted">292</a></td>
 </tr>
@@ -280,10 +281,10 @@ A SCANDAL IN BOHEMIA</h2>
 <h3>I</h3>
 
 <div class="fig100">
-  <img class="drop-cap" src="images/drop_t.jpg" width="100" height="101" alt="" />
+  <img class="drop-cap" src="images/drop_t.jpg" width="00" height="01" alt="" />
 </div>
 
-<p class="first-para drop-cap">TO Sherlock Holmes she is always <em>the</em> woman. I have seldom heard
+<p class="first-para drop-cap">To Sherlock Holmes she is always <em>the</em> woman. I have seldom heard
 him mention her under any other name. In his eyes she eclipses and
 predominates the whole of her sex. It was not that he felt any emotion
 akin to love for Irene Adler. All emotions, and that one particularly,
