Added CSS shapes

--- a/index.html
+++ b/index.html
@@ -58,11 +58,15 @@ Libraries.)
 <p class="center">Ebook cover prepared by the transcriber and placed in the public domain.</p>
 </div>
 
+<div id="chevron"></div>
+<div id="chevron"></div>
+<div id="chevron"></div>
 <div class="hidehand">
 <div class="figcenter fig504">
 <img src="images/cover.jpg" width="504" height="800" alt="Cover" />
 </div>
 </div>
+
 
 <h1>ADVENTURES OF SHERLOCK HOLMES</h1>
 
@@ -73,6 +77,8 @@ Libraries.)
 <div class="caption2nomtright">[Page 238]</div>
 </div>
 
+
+
 <hr class="chap" />
 <p class="title"><span class="p150">ADVENTURES</span><br />
 <br />
@@ -80,11 +86,11 @@ OF<br />
 <br />
 <span class="p200">SHERLOCK HOLMES</span></p>
 
-<p class="title mt4">BY<br />
+<p class="titlemt4">BY<br />
 <span class="p150">A. CONAN DOYLE</span><br />
 <small>AUTHOR OF “MICAH CLARKE” ETC.</small></p>
 
-<p class="title mt4"><small>ILLUSTRATED</small></p>
+<p class="titlemt4"><small>ILLUSTRATED</small></p>
 
 <div class="figcenterfig120">
 <img src="images/logo.jpg" width="120" height="139" alt="Logo" />
@@ -271,7 +277,9 @@ OF<br />
 
 
 <hr class="chap" />
+
 <h2>ADVENTURES OF SHERLOCK HOLMES<br />
+  <div id="magnifying-glass"></div>
 <br />
 <a class="pagenum" name="Page_3" title="3"> </a>
 <a name="i" id="i"></a><span class="ornate">Adventure I</span><br />
@@ -1825,10 +1833,10 @@ it is, and you can read for yourself.”</p>
 note-paper. It read in this fashion:</p>
 
 <div class="figcenter fig296 line-height2">
-<div class="center nomb">“<span class="smcap">THE RED-HEADED LEAGUE<br />
+<div class="centernomb">“<span class="smcap">THE RED-HEADED LEAGUE<br />
 IS<br />
 DISSOLVED.</span></div>
-<div class="right nomt"><i>October 9, 1890.</i>”</div>
+<div class="rightnomt"><i>October 9, 1890.</i>”</div>
 </div>
 
 <p>Sherlock Holmes and I surveyed this curt announcement and the rueful
