Beginning of Images

--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
     <meta http-equiv="Content-Style-Type" content="text/css" />
     <link rel="stylesheet" href="https://use.typekit.net/ydv2bhy.css">
+    <link rel="stylesheet" href="https://use.typekit.net/ydv2bhy.css">
+
+
     <title>
       The Project Gutenberg eBook of Adventures of Sherlock Holmes, by A. Conan Doyle
     </title>
